--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,25 @@
 {
-    "require": {
-        "slim/slim": "3.*",
-        "davidvandertuijn/password": "^2.1"
+     "require": {
+        "php": "^7.4 || ^8.0",
+        "ext-json": "*",
+        "firebase/php-jwt": "^6.1",
+        "monolog/monolog": "^2.3",
+        "php-di/php-di": "^6.3",
+        "slim/csrf" : "^0.8.3",
+        "slim/slim" : "^3.0"
+    },
+    "require-dev": {
+        "jangregor/phpstan-prophecy": "^1.0.0",
+        "phpspec/prophecy-phpunit": "^2.0",
+        "phpstan/extension-installer": "^1.1.0",
+        "phpstan/phpstan": "^1.3",
+        "phpunit/phpunit": "^9.5.11",
+        "squizlabs/php_codesniffer": "^3.6"
+    },
+	
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
     }
 }
